feat: Implement custom splash screen and update dependencies
This commit introduces a custom splash screen to the Random Names App.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:name=".RandomNamesApp"
-        android:theme="@style/Theme.RandomNamesApp">
+        android:theme="@style/Base.Theme.SplashScreen.">
         <activity
             android:name=".presentation.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.RandomNamesApp">
+            android:theme="@style/Base.Theme.SplashScreen.">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
